// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Switch examples > Default switch should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-10 v-justify-content-between v-m-8"
    style="max-inline-size: 288px;"
  >
    <label
      class="v-label v-switch-label"
      for="default-switch-example-switch"
    >
      Label
    </label>
    <input
      class="v-switch"
      id="default-switch-example-switch"
      name="default-switch"
      role="switch"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch examples > Disabled selected switch should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-10 v-justify-content-between v-m-8"
    style="max-inline-size: 288px;"
  >
    <label
      class="v-label v-switch-label"
      for="disabled-switch-on-example-switch"
    >
      Label
    </label>
    <input
      checked=""
      class="v-switch"
      disabled=""
      id="disabled-switch-on-example-switch"
      name="disabled-switch-on"
      role="switch"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch examples > Disabled switch should render correctly 1`] = `
<div>
  <div
    class="v-flex v-flex-wrap v-gap-10 v-justify-content-between v-m-8"
    style="max-inline-size: 288px;"
  >
    <label
      class="v-label v-switch-label"
      for="disabled-switch-example-switch"
    >
      Label
    </label>
    <input
      class="v-switch"
      disabled=""
      id="disabled-switch-example-switch"
      name="disabled-off-switch"
      role="switch"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Switch examples > Reusable switch should render correctly 1`] = `
<div>
  <div>
    <div
      class="v-align-items-center v-flex v-flex-wrap v-gap-10 v-justify-content-between v-m-8"
      style="flex-basis: min-content;"
    >
      <div
        class="v-flex v-flex-col v-flex-grow v-gap-2 v-mt-2"
        style="flex-basis: min-content;"
      >
        <label
          class="v-label v-switch-label v-typography-label-large"
          for="test-id-0-input"
        >
          Label
        </label>
        <span
          class="v-typography-body-3"
          id="test-id-0-description"
        >
          This is optional text that describes the label in more detail.
        </span>
      </div>
      <input
        aria-describedby="test-id-0-description"
        aria-invalid="false"
        class="v-switch"
        id="test-id-0-input"
        role="switch"
        type="checkbox"
      />
    </div>
    <span
      class="v-input-message v-mt-4"
      id="test-id-0-message"
    />
    <div
      style="margin-top: 24px;"
    >
      <details
        class="v-accordion"
        id="test-id-1"
      >
        <summary
          class="v-button v-button-large v-button-secondary v-accordion-heading v-gap-2 v-typography-body-2-medium"
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-right v-icon-rtl v-accordion-toggle-icon v-accordion-toggle-icon-closed"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M12 8.00049L5.39355 15.0005L4 13.5249L9.21387 8.00049L4 2.47607L5.39355 1.00049L12 8.00049Z"
            />
          </svg>
          <svg
            aria-hidden="true"
            class="v-icon v-icon-visa v-icon-tiny v-icon-chevron-down v-accordion-toggle-icon v-accordion-toggle-icon-open"
            focusable="false"
            height="16"
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              class="v-icon-primary"
              d="M1 5.39404L2.47559 4.00049L8 9.21436L13.5244 4.00049L15 5.39404L8 12.0005L1 5.39404Z"
            />
          </svg>
          <div
            class="v-align-items-center v-flex v-gap-6"
          >
            Customize demo
          </div>
        </summary>
        <div
          class="v-accordion-panel v-px-32"
        >
          <form>
            <div
              class="v-flex v-flex-col v-gap-16"
              style="margin-bottom: 32px;"
            >
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-2-input"
                >
                  Description
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-2-input"
                      type="text"
                      value="This is optional text that describes the label in more detail."
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-3-input"
                >
                  Label
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-3-input"
                      type="text"
                      value="Label"
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex v-flex-col v-gap-4"
              >
                <label
                  class="v-label"
                  for="test-id-4-input"
                >
                  Error message
                   
                </label>
                <div
                  class="v-flex v-flex-col v-flex-grow v-gap-4"
                >
                  <div
                    class="v-surface v-input-container"
                  >
                    <input
                      aria-invalid="false"
                      class="v-input"
                      id="test-id-4-input"
                      type="text"
                      value="This is required text that describes the error in more detail."
                    />
                  </div>
                </div>
              </div>
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-5-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-5-input"
                  >
                    Align start
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-5-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-6-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-6-input"
                  >
                    Disabled
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-6-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-7-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-7-input"
                  >
                    Invalid
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-7-message"
              />
              <div
                class="v-flex"
              >
                <input
                  aria-invalid="false"
                  class="v-checkbox"
                  id="test-id-8-input"
                  type="checkbox"
                />
                <div
                  class="v-flex v-flex-col v-gap-2 v-my-10"
                >
                  <label
                    class="v-label"
                    for="test-id-8-input"
                  >
                    Required
                  </label>
                </div>
              </div>
              <span
                class="v-input-message v-mt-4"
                id="test-id-8-message"
              />
            </div>
            <div
              class="v-flex v-gap-16"
              style="margin-bottom: 16px;"
            >
              <button
                class="v-button"
                type="submit"
              >
                Apply
              </button>
              <button
                class="v-button v-button-secondary"
                type="button"
              >
                Reset
              </button>
            </div>
          </form>
        </div>
      </details>
    </div>
  </div>
</div>
`;

exports[`Switch examples > Switch with description should render correctly 1`] = `
<div>
  <div
    class="v-align-items-center v-flex v-flex-row v-flex-wrap v-gap-10 v-justify-content-between v-m-8"
    style="max-inline-size: 288px;"
  >
    <div
      class="v-flex v-flex-col v-flex-grow v-gap-2 v-justify-content-between"
      style="flex-basis: min-content;"
    >
      <label
        class="v-label v-switch-label"
        for="optional-message-switch-example-switch"
      >
        Label
      </label>
      <span
        class="v-input-message"
        id="optional-message-switch-example-message"
      >
        This is optional text that can be used to describe the label in more detail.
      </span>
    </div>
    <input
      aria-describedby="optional-message-switch-example-message"
      class="v-switch"
      id="optional-message-switch-example-switch"
      name="switch-with-message"
      role="switch"
      type="checkbox"
    />
  </div>
</div>
`;
